demos/orbital-outfitters-code/openshift/manifests/base/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: orbital-suppliers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: us.icr.io/orbital-suppliers-aps/backend:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "768Mi"
