demos/orbital-outfitters-code/openshift/manifests/base/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: orbital-suppliers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: us.icr.io/orbital-suppliers-aps/frontend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
            limits:
              memory: "128Mi"
