demos/orbital-outfitters-code/openshift/manifests/base/statefulset-chromadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chromadb
  namespace: orbital-suppliers
spec:
  serviceName: chromadb
  replicas: 1
  selector:
    matchLabels:
      app: chromadb
  template:
    metadata:
      labels:
        app: chromadb
    spec:
      containers:
        - name: chromadb
          image: us.icr.io/orbital-suppliers-aps/vector-db:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: chromadb-data
              mountPath: /data
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
      volumes:
        - name: chromadb-data
          persistentVolumeClaim:
            claimName: chromadb-data
