demos/orbital-outfitters-code/openshift/manifests/base/statefulset-opensearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opensearch
  namespace: orbital-suppliers
spec:
  serviceName: opensearch
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: opensearch
          image: us.icr.io/orbital-suppliers-aps/vector-db:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          volumeMounts:
            - name: opensearch-data
              mountPath: /usr/share/opensearch/data
          resources:
            requests:
              memory: "768Mi"
            limits:
              memory: "1Gi"
      volumes:
        - name: opensearch-data
          persistentVolumeClaim:
            claimName: opensearch-data
