demos/orbital-outfitters-code/openshift/manifests/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: orbital-suppliers
spec:
  selector:
    app: backend
  ports:
    - port: 3001
      targetPort: 3001
