demos/orbital-outfitters-code/openshift/manifests/base/service-chromadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: chromadb
  namespace: orbital-suppliers
spec:
  selector:
    app: chromadb
  ports:
    - port: 8000
      targetPort: 8000
