demos/orbital-outfitters-code/openshift/manifests/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: orbital-suppliers
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
