demos/orbital-outfitters-code/openshift/manifests/base/service-opensearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  namespace: orbital-suppliers
spec:
  selector:
    app: opensearch
  ports:
    - port: 9200
      targetPort: 9200
      name: http
