demos/orbital-outfitters-code/openshift/manifests/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: orbital-suppliers
  namespace: orbital-suppliers
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
